<resources>
    <string name="app_name">ScoreKeeper</string>
    <string name="teamA">Team A</string>
    <string name="teamB">Team B</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="reset">R</string>
    <string name="resetAll">Reset</string>
    <string name="enter">Enter</string>
</resources>
