<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.example.android.scorekeeper.MainActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/bowling"

            />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Bowl O Rama Tournament"
            android:layout_gravity="center_horizontal"
            android:textSize="30dp"
            />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/teamA"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                android:textColor="#616161"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:fontFamily="sans-serif-medium"

                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="40sp"
                    android:id="@+id/markUpA"
                    android:textColor="#000000"
                    android:fontFamily="sans-serif-light"
                    />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="-"
                        android:textSize="40sp"
                        android:id="@+id/markUpA2"
                        android:textColor="#000000"
                        android:fontFamily="sans-serif-light"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="-"
                        android:textSize="40sp"
                        android:id="@+id/markUpA3"
                        android:textColor="#000000"
                        android:fontFamily="sans-serif-light"
                        />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:id="@+id/team_a_score"
                android:padding="1dp"
                android:textSize="56sp"
                android:textColor="#000000"
                android:fontFamily="sans-serif-light"
                />
            </LinearLayout>

            <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

                <Button
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:text="@string/one"
                android:layout_marginLeft="60dp"
                android:background="@drawable/roundedshape"
                android:onClick="onePointA"
                    />

                <Button
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:text="@string/two"
                android:background="@drawable/roundedshape"
                android:onClick="twoPointA"
                    />

                <Button
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:text="@string/three"
                android:background="@drawable/roundedshape"
                android:onClick="threePointA"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:text="@string/four"
                    android:layout_marginLeft="60dp"
                    android:background="@drawable/roundedshape"
                    android:onClick="fourPointA"
                    />

                <Button
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:text="@string/five"
                    android:background="@drawable/roundedshape"
                    android:onClick="fivePointA"
                    />

                <Button
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:text="@string/six"
                    android:background="@drawable/roundedshape"
                    android:onClick="sixPointA"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:text="@string/seven"
                    android:layout_marginLeft="60dp"
                    android:background="@drawable/roundedshape"
                    android:onClick="sevenPointA"
                    />

                <Button
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:text="@string/eight"
                    android:background="@drawable/roundedshape"
                    android:onClick="eightPointA"
                    />

                <Button
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:text="@string/nine"
                    android:background="@drawable/roundedshape"
                    android:onClick="ninePointA"
                    />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:text="X"
                    android:layout_marginLeft="60dp"
                    android:background="@drawable/roundedshape"
                    android:onClick="strikeMarkA"
                    />

                <Button
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:text="@string/reset"
                    android:background="@drawable/roundedshape"
                    android:onClick="resetA"
                    />

                <Button
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:text="/"
                    android:background="@drawable/roundedshape"
                    android:onClick="spareMarkA"
                    />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter"
                android:onClick="enterCalcA"
                />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/teamB"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                android:textColor="#616161"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:fontFamily="sans-serif-medium"

                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="40sp"
                    android:id="@+id/markUpB"
                    android:textColor="#000000"
                    android:fontFamily="sans-serif-light"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textSize="40sp"
                    android:id="@+id/markUpB2"
                    android:textColor="#000000"
                    android:fontFamily="sans-serif-light"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textSize="40sp"
                    android:id="@+id/markUpB3"
                    android:textColor="#000000"
                    android:fontFamily="sans-serif-light"
                    />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:id="@+id/team_b_score"
                    android:padding="1dp"
                    android:textSize="56sp"
                    android:textColor="#000000"
                    android:fontFamily="sans-serif-light"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:text="@string/one"
                    android:layout_marginLeft="60dp"
                    android:background="@drawable/roundedshape"
                    android:onClick="onePointB"
                    />

                <Button
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:text="@string/two"
                    android:background="@drawable/roundedshape"
                    android:onClick="twoPointB"
                    />

                <Button
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:text="@string/three"
                    android:background="@drawable/roundedshape"
                    android:onClick="threePointB"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:text="@string/four"
                    android:layout_marginLeft="60dp"
                    android:background="@drawable/roundedshape"
                    android:onClick="fourPointB"
                    />

                <Button
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:text="@string/five"
                    android:background="@drawable/roundedshape"
                    android:onClick="fivePointB"
                    />

                <Button
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:text="@string/six"
                    android:background="@drawable/roundedshape"
                    android:onClick="sixPointB"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:text="@string/seven"
                    android:layout_marginLeft="60dp"
                    android:background="@drawable/roundedshape"
                    android:onClick="sevenPointB"
                    />

                <Button
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:text="@string/eight"
                    android:background="@drawable/roundedshape"
                    android:onClick="eightPointB"
                    />

                <Button
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:text="@string/nine"
                    android:background="@drawable/roundedshape"
                    android:onClick="ninePointB"
                    />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:text="X"
                    android:layout_marginLeft="60dp"
                    android:background="@drawable/roundedshape"
                    android:onClick="strikeMarkB"
                    />

                <Button
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:text="@string/reset"
                    android:background="@drawable/roundedshape"
                    android:onClick="resetB"
                    />

                <Button
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:text="/"
                    android:background="@drawable/roundedshape"
                    android:onClick="spareMarkB"
                    />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                >
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter"
                    android:onClick="enterCalcB"
                    />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
    </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/resetAll"
            android:layout_marginBottom="10dp"
            android:onClick="resetThis"

            />
</RelativeLayout>
